# reControlHakaton

deploy/: docker-compose.yml
deploy/nginx/: default.conf  nginx.conf
src/WebApp/: .dev_env  Dockerfile  Makefile  pyproject.toml
src/WebApp/WebApp/: settings.py  urls.py
src/WebApp/scripts/: fill_db.py
src/WebApp/tickets/: admin.py  models.py  serializers.py  urls.py  views.py
src/WebApp/tickets/migrations/: 0001_initial.py  0002_alter_ticket_title.py  0003_taskstatus_alter_task_waiting_for_alter_task_status.py  0004_alter_taskstatus_table.py  0005_ticketstatus_alter_ticket_status.py  0006_alter_task_waiting_for.py  0007_task_address.py  0008_task_created.py
src/WebApp/users/: admin.py  models.py  serializers.py  urls.py  views.py
src/WebApp/users/migrations/: 0001_initial.py  0002_user_role.py  0003_alter_user_phone.py  0004_user_profession_alter_user_role.py  0005_user_firstname_user_lastname_user_middlename_and_more.py  0006_alter_user_photo_alter_user_profession.py  0007_profession_alter_user_profession.py  0008_alter_user_profession.py  0009_user_is_staff.py  0010_user_city_user_organization.py  0011_rename_firstname_user_fio_remove_user_lastname_and_more.py
